# psych-agent

./: .env.example  .gitignore  BENCHMARK_INDEX.md  BENCHMARK_REVIEW.md  CLOUD_DEPLOYMENT.md  CLOUD_MIGRATION_SUMMARY.md  Dockerfile  FLOW_DIAGRAM.md  INSTALLATION_COMPLETE.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_CLOUD_DEPLOY.md  RAG_ARCHITECTURE.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  READY_TO_USE.md  TASKS.md  docker-compose.yml  ollama_diagnostic.py  pyproject.toml  railway.json  railway.toml  sources.md
.kiro/specs/cloud-psychiatry-app/: design.md  (+2 more)
backend/: Dockerfile  PsychBench-benchmark-comparison-20260111-223601.json  PsychBench-benchmark-comprehensive-20260112-005023.json  PsychBench-benchmark-streaming-20260111-232218.json  PsychBench-benchmark-test-results.json  PsychBench-benchmark-test.json  README.md  alembic.ini  emergency_server.py  requirements-cloud.txt  requirements.txt  test_server.py  test_simple.py
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: run_benchmark.py
backend/tests/: conftest.py
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: BENCHMARK_SUMMARY.md  README.md  README_BENCHMARKS.md  compare_llm_benchmarks.py  create_admin.py  ingest.py  ingest_enhanced.py  ingest_hierarchical.py  init_admin.py  init_db.py  run_benchmark.bat  run_benchmark.sh  setup_asr.py  setup_ollama.py  test_agent.py  test_chat.py  test_db.py  test_rag.py  upload_hierarchical_to_pinecone.py  upload_to_pinecone.py
(+55 files in other folders)
