[project]
name = "psych-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=0.3.0",
    "pymupdf>=1.26.7",
    "sentence-transformers>=5.2.0",
    "strands-agents>=1.20.0",
]
